# zxing

androidTest/java/com/example/zxing_java/: ExampleInstrumentedTest.java
main/: AndroidManifest.xml
main/cpp/: CMakeLists.txt  native-lib.cpp
main/cpp/zxing/: ReadBarcode.cpp
main/java/com/example/zxing_java/: MainActivity.java  Result.java
main/res/layout/: activity_main.xml
main/res/values/: strings.xml  themes.xml
main/res/values-night/: themes.xml
test/java/com/example/zxing_java/: ExampleUnitTest.java
